Migrate users of Optional.get()
Updated modernizer is flatting these callers, migrate them to better
alternatives.

Change-Id: Icf254d481f9b9769d97f96a9f033d9cb58a3685a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>